fix double scroll bars

--- a/frontend/src/styles/DefaultBrowseView.css
+++ b/frontend/src/styles/DefaultBrowseView.css
@@ -4,6 +4,20 @@
   box-sizing: border-box;
 }
 
+.filters-header-wrapper {
+  max-height: 100px;
+  opacity: 1;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  will-change: max-height, opacity;
+}
+
+.filters-header-wrapper-hidden {
+  max-height: 0;
+  opacity: 0;
+  padding: 0;
+}
+
 .filters-header {
   display: flex;
   font-size: 0.9rem;
